2008-01-18  Luca Bruno  <lethalman88@gmail.com>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=16910
        [GTK] REGRESSION: keyboard cursor doesn't blink

        http://bugs.webkit.org/show_bug.cgi?id=16863
        [GTK] REGRESSION: tab focusing doesn't work

        * WebView/webkitwebview.cpp:
        (webkit_web_view_focus_in_event): Added. Set the active frame.
        (webkit_web_view_class_init):


Canonical link: https://commits.webkit.org/23492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29665 268f45cc-cd09-0410-ab3c-d52691b4dbfc